# stairdismount

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
helpers/: BuildDependencies.cmake  BulletConfig.cmake  IncludeSFML.cmake  ucm.cmake
src/: Application.cpp  Application.h  main.cpp
src/components/: MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h
src/components/graphics/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
src/components/interfaces/: Component.h
src/core/: Configuration.h  GameCore.cpp  GameCore.h
src/core/entity/: Entity.cpp  Entity.h
src/core/graphics/: Camera.cpp  Camera.h  DrawEngine.cpp  DrawEngine.h
src/core/input/: EventManager.cpp  EventManager.h
src/core/input/implementation/: CameraPositionShifter.cpp  CameraPositionShifter.h  CameraRotator.cpp  CameraRotator.h  GameWindowListener.cpp  GameWindowListener.h
src/core/input/interfaces/: EventSubscriber.cpp  EventSubscriber.h  KeyboardSubscriber.cpp  KeyboardSubscriber.h  MouseSubscriber.cpp  MouseSubscriber.h  WindowSubscriber.cpp  WindowSubscriber.h
src/core/modules/: ModuleManager.cpp  ModuleManager.h
src/core/modules/entities/: EntitiesModule.cpp  EntitiesModule.h
src/core/modules/graphics/: Cylinder.cpp  Cylinder.h  (+4 more)
src/core/physics/: CollisionShapes.h  PhysicsManager.cpp  PhysicsManager.h
src/core/resources/: NewLoader.h  OBJ_Loader.h  ObjLoader.cpp  ObjLoader.h  RenderObject.cpp  RenderObject.h
src/core/shaders/: ShaderLoader.cpp  ShaderLoader.h  fragmentShader.h  vertexShader.h
src/core/structs/: CameraData.h  GLObjectData.h  MeshTransform.h  RenderStructure.h  ShaderData.h  Transform.h
src/core/system/: Component.h  EntityManager.cpp  EntityManager.h
src/core/time/: GTime.cpp  GTime.h
(+24 files in other folders)
